hotfix: update background color in loading screen

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -43,7 +43,7 @@
 <body>
 <style>
     body {
-      background-color: #000000;
+      background-color: #0D132C;
     }
   </style>
 <!-- Loading indicator -->
